<resources>
    <string name="app_name">Marwari Mart</string>

    <string name="api_key">AIzaSyBd4qzhreQ2Ww7u6SSczmxktlPRCLF-2e8</string>

    <string name="login">Login</string>
    <string name="sing_up">Sign Up</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="full_name">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="select_your_city">Select Your City</string>
    <string name="continues">Continue</string>
    <string name="continuesshop">Continue Shopping</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="search">Search items</string>
    <string name="my_subscriptions">My Subscriptions</string>
    <string name="my_wallet">My Wallet</string>
    <string name="my_order">My Order</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="refer_amp_earn"><![CDATA[Refer & Earn]]></string>
    <string name="share_with_friends">Share with friends</string>
    <string name="categories">Categories</string>
    <string name="see_all">See all</string>
    <string name="freshly_stocked">Freshly stocked</string>
    <string name="collection">Collection</string>
    <string name="discount">Discount &amp; Offer</string>
    <string name="create_subscription">Create Subscription</string>
    <string name="confirm">Confirm</string>
    <string name="daily">Daily</string>
    <string name="weekends">Weekends</string>
    <string name="weekdays">Weekdays</string>
    <string name="delivery_once">Delivery Once</string>
    <string name="subscribe">Subscribe</string>
    <string name="my_address">My Address</string>


    <string name="amount">Amount</string>
    <string name="add_money">Add Money</string>
    <string name="refercode">Refer code (optional)</string>
    <string name="country_code">Country Code</string>
    <string name="coupon_list">Coupon List</string>
    <string name="deal_of_the_day">Deal of the Day</string>

    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="privacy_amp_policy"><![CDATA[Privacy & Policy]]></string>
    <string name="sign_out">Sign Out</string>
    <string name="order_histry">Your Orders </string>
    <string name="empty_title">Oopps... !</string>
    <string name="empty">No data found please try after sometime</string>
    <string name="info">Info</string>
    <string name="price">Price</string>
    <string name="variation">Variation</string>
    <string name="qty">Qty</string>
    <string name="start_date">Start Date</string>
    <string name="total_delivery">Total Delivery</string>
    <string name="total">Total</string>
    <string name="delivery">Delivery Charge </string>
    <string name="coupon_amount">Coupon Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="address">Address</string>
    <string name="history">History</string>
    <string name="cart">Cart</string>
    <string name="order_cancel">Order Cancel</string>
    <string name="notification">Notification</string>
    <string name="title_activity_test_maps">TestMapsActivity</string>

</resources>