<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@drawable/raound_detail"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/raound_detail1"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|left"
                android:padding="10dp"
                android:text="Choose Days"
                android:textSize="18dp"
                android:textStyle="bold" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:padding="5dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="15dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/txt_daily"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:background="@drawable/rounded_city"
                    android:gravity="center"
                    android:text="@string/daily" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/txt_weekdays"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:background="@drawable/rounded_city"
                    android:gravity="center"
                    android:text="@string/weekdays" />

                <View
                    android:layout_width="10dp"
                    android:layout_height="1dp" />

                <TextView
                    android:id="@+id/txt_weekend"
                    android:layout_width="100dp"
                    android:layout_height="38dp"
                    android:background="@drawable/rounded_city"
                    android:gravity="center"
                    android:text="@string/weekends" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp" />
            <TextView
                android:id="@+id/txt_confirm"
                android:layout_width="250dp"
                android:layout_height="wrap_content"

                android:background="@drawable/rounded_button"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/confirm"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:textStyle="bold" />
            <View
                android:layout_width="10dp"
                android:layout_height="30dp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>